scss and html refactoring

--- a/themes/metrumy/layouts/404.html
+++ b/themes/metrumy/layouts/404.html
@@ -1,5 +1,5 @@
 {{ partial "head.html" . }}
-{{ partial "topbar.html" . }}
+{{ partial "logo.html" . }}
 
 <section class="article article--narrow">
     
@@ -7,9 +7,6 @@
     The page you were looking for isn't here.</h2>
 
     <p>Maybe it doesn't exist anymore or the address was typed incorrectly.</p>
-    
-    <br>
-    {{ partial "postListShort.html" . }}
 
 </section>
 
