--- a/themes/metrumy/layouts/partials/footer.html
+++ b/themes/metrumy/layouts/partials/footer.html
@@ -1,29 +1,32 @@
-
 <footer>
 
     <div>
-      <ul class="list--contacts">
-        <li>
-          <div class="list-contacts-tag">email:&nbsp;</div>
-          <div class="liame"></div>
-        </li>
-        <li>
-          <div class="list-contacts-tag">github:&nbsp;</div> <div><a href="https://github.com/bart747">bart747</a></div>
-        </li>
-        <li>
-          <div class="list-contacts-tag">twitter:&nbsp;</div> <div><a href="https://twitter.com/bwhimself">bwhimself</a></div>
-        </li>
-      </ul>
+        <ul class="list--contacts">
+            <li>
+                <div class="list-contacts-tag">email:&nbsp;</div>
+                <div class="liame"></div>
+            </li>
+            <li>
+                <div class="list-contacts-tag">github:&nbsp;</div>
+                <div><a href="https://github.com/bart747">bart747</a></div>
+            </li>
+            <li>
+                <div class="list-contacts-tag">twitter:&nbsp;</div>
+                <div><a href="https://twitter.com/bwhimself">bwhimself</a></div>
+            </li>
+        </ul>
     </div>
     <small>
-    &copy;2016-2018 Bartosz Wieczorek.
-    <a href="https://creativecommons.org/licenses/by/3.0/">
-    Some rights reserved</a> &mdash; please attribute and link back.
+        &copy;2016-2018 Bartosz Wieczorek.
+        <a href="https://creativecommons.org/licenses/by/3.0/">
+            Some rights reserved
+        </a>
+        &mdash; please attribute and link back.
     </small>
 
-<div class="footer--top">
-<a href="#top">top</a>
-</div>
+    <div class="footer--link-top">
+        <a href="#top">top</a>
+    </div>
 
 </footer>
 
@@ -32,4 +35,5 @@
 
 </div>
 </body>
+
 </html>
