--- a/themes/metrumy/layouts/partials/head.html
+++ b/themes/metrumy/layouts/partials/head.html
@@ -1,48 +1,51 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="theme-color" content="#ff6622">
+    <meta name="theme-color" content="#ff6622">
 
-  <title>{{ .Title }}</title>
-  <meta name="description" content="">
+    <title>{{ .Title }}</title>
+    <meta name="description" content="">
 
-  <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="{{ .Title }}">
-  <meta itemprop="description" content="{{ .Summary }}">
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="{{ .Title }}">
+    <meta itemprop="description" content="{{ .Summary }}">
 
-  <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://bart747.github.io">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="{{ .Title }}">
-  <meta property="og:description" content="{{ .Summary }}">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://bart747.github.io">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="{{ .Title }}">
+    <meta property="og:description" content="{{ .Summary }}">
 
-  <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="{{ .Title }}">
-  <meta name="twitter:creator" content="@bwhimself">
-  <meta name="twitter:description" content="{{ .Summary }}">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="{{ .Title }}">
+    <meta name="twitter:creator" content="@bwhimself">
+    <meta name="twitter:description" content="{{ .Summary }}">
 
-  {{ .Hugo.Generator }}
+    {{ .Hugo.Generator }}
 
-  <link rel="canonical" href="{{ .Permalink }}">
-  {{ if .RSSLink }}<link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
+    <link rel="canonical" href="{{ .Permalink }}">
+    {{ if .RSSLink }}
+    <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Title }}" />{{ end }}
 
-  <!-- Stylesheets -->
-  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="/dist/bundle.css?{{ now.Unix }}">
+    <!-- Stylesheets -->
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/dist/bundle.css?{{ now.Unix }}">
 
-  <link rel="icon" type="image/png" href="/icon512.png?v=3" sizes="512v512">
-  <link rel="apple-touch-icon" href="/icon512.png?v=3" sizes="512v512">
+    <link rel="icon" type="image/png" href="/icon512.png?v=3" sizes="512v512">
+    <link rel="apple-touch-icon" href="/icon512.png?v=3" sizes="512v512">
 
-  <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/manifest.json">
 
-  <meta name="google-site-verification" content="vBPgvbkTPtu2MKsCfMMETSBB-crQhj8AZuJ2JUUF2_0" />
+    <meta name="google-site-verification" content="vBPgvbkTPtu2MKsCfMMETSBB-crQhj8AZuJ2JUUF2_0" />
 
 </head>
+
 <body>
-<div id="allwrapper">
+    <div id="allwrapper">
