--- a/themes/metrumy/assets/sass/_grid-global.scss
+++ b/themes/metrumy/assets/sass/_grid-global.scss
@@ -10,10 +10,12 @@
 // flexbox grid
 @mixin columns {
   .col {
+    display: block;
     flex: 1 1 auto;
+    flex-grow: 0;
+    align-self: flex-start;
     margin: 0;
-    margin-right: 1em;
-    margin-left: 1em;
+    margin-bottom: 1em;
   }
 
   .col-100 {
@@ -40,13 +42,7 @@
     flex-basis: 12%;
   }
 
-  .col:first-child {
-    margin-left: 0;
-  }
 
-  .col:last-child {
-    margin-right: 0;
-  }
 }
 
 .grid.grid-fix {
@@ -59,7 +55,9 @@
 
   .grid {
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: baseline;
     @include columns;
   }
   
@@ -69,7 +67,11 @@
 
   .blog-grid {
     display: flex;
-    justify-content: center;
+    align-items: stretch;
+    flex-wrap: wrap;
+    height: 100%;
+    justify-content: flex-start;
+    align-content: baseline;
     @include columns;
     margin-bottom: 3em;
   }
