redesign blog layout

--- a/themes/metrumy/layouts/partials/blogFront.html
+++ b/themes/metrumy/layouts/partials/blogFront.html
@@ -6,7 +6,7 @@
 
     <div class="post-list--post">
 
-        <div class="article--narrow">
+        <div class="article--narrow-left">
 
             <div class="date post-list--date secondary">
                 {{ .Date.Format "Jan 2, 2006" }}
