--- a/themes/metrumy/assets/sass/_typography-global.scss
+++ b/themes/metrumy/assets/sass/_typography-global.scss
@@ -183,6 +183,12 @@ blockquote {
   padding: 0 1em;
 } 
 
+.article--narrow-left {
+  @include wrapper-mid;
+  margin-left: 0; 
+  padding: 0 1em;
+}
+
 .article--shortnote {
   background-color: $yellow-light;
   font-family: $monospace;
