redesign 404 page copy

--- a/themes/metrumy/layouts/404.html
+++ b/themes/metrumy/layouts/404.html
@@ -4,9 +4,8 @@
 <section class="article article--narrow">
     
     <h2><span class="orange">Oops!</span><br>
-    The page you were looking for isn't here.</h2>
-
-    <p>Maybe it doesn't exist anymore or the address was typed incorrectly.</p>
+    The page you're looking for isn't here.</h2>
+    <a href="{{ .Site.BaseURL }}">Homepage</a>
 
 </section>
 
