fix broken links

--- a/themes/metrumy/layouts/partials/article.html
+++ b/themes/metrumy/layouts/partials/article.html
@@ -31,7 +31,7 @@
     {{ if .Params.similarURL }}
     <div class="subnav--tag">You also might like:</div>
     <div>
-        <a class="similar" href="{{ .Site.BaseURL }}{{ .Params.similarURL }}"> {{ .Params.similarTitle }}</a>
+        <a class="similar" href="{{ .Site.BaseURL }}/{{ .Params.similarURL }}"> {{ .Params.similarTitle }}</a>
     </div>
     {{ end }}
 </section>
