--- a/themes/metrumy/layouts/partials/footer.html
+++ b/themes/metrumy/layouts/partials/footer.html
@@ -16,13 +16,13 @@
             </li>
         </ul>
     </div>
-    <small>
+    <div class="footer--copyrights">
         &copy;2016-2018 Bartosz Wieczorek.
         <a href="https://creativecommons.org/licenses/by/3.0/">
             Some rights reserved
         </a>
         &mdash; please attribute and link back.
-    </small>
+    </div>
 
     <div class="footer--link-top">
         <a href="#top">top</a>
