--- a/themes/metrumy/assets/sass/_logo.scss
+++ b/themes/metrumy/assets/sass/_logo.scss
@@ -6,7 +6,7 @@
   font-weight: bold;
   letter-spacing: 1px;
   text-align: center;  
-  margin: 0 0 2.5em;
+  margin: 0;
   padding: 0.5em 1em;
   height: 2.5em;
   background: $black;
