add meta description content

--- a/themes/metrumy/layouts/partials/head.html
+++ b/themes/metrumy/layouts/partials/head.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#ff6622">
 
     <title>{{ .Title }}</title>
-    <meta name="description" content="">
+    <meta name="description" content="UI Performance and Resilience">
 
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="{{ .Title }}">
