edit Head partial,make new custom Head partial headCustom.html

--- a/themes/metrumy/layouts/partials/headCustom.html
+++ b/themes/metrumy/layouts/partials/headCustom.html
@@ -14,13 +14,14 @@
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="{{ .Title }}">
     <meta itemprop="description" content="{{ .Summary }}">
-    <meta name="description" content="Homepage: UI Performance and Resilience blog">
+    <meta name="description" content="{{ .Summary }}">
 
     <!-- Open Graph Tags -->
     <meta property="og:url" content="https://bart747.github.io">
     <meta property="og:type" content="website">
     <meta property="og:title" content="{{ .Title }}">
     <meta property="og:description" content="{{ .Summary }}">
+    <!-- <meta property="og:image" content="http://example.com/image.jpg" /> -->
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary">
