minor layout edits - margins, paddings

--- a/themes/metrumy/assets/sass/_layouts-wrappers-global.scss
+++ b/themes/metrumy/assets/sass/_layouts-wrappers-global.scss
@@ -68,7 +68,7 @@ video {
 
 .wrapper--media {
   max-width: 1000px;
-  margin: 0 auto 1em;
+  margin: 0 auto;
   padding-top: 1rem;
   padding-bottom: 1rem;
   @media (max-width: $screen-big) {
