ui edits - margins, paddings, colors, sizes

--- a/themes/metrumy/assets/sass/_colors-global.scss
+++ b/themes/metrumy/assets/sass/_colors-global.scss
@@ -1,5 +1,6 @@
 $text-color:          #383838;
 $background-color:    #faf7f5;
+$background-color-light: #fffafa;
 $code-color:          #305ea7;
 
 $black:               #222;
