--- a/themes/metrumy/assets/sass/_layouts-wrappers-global.scss
+++ b/themes/metrumy/assets/sass/_layouts-wrappers-global.scss
@@ -91,7 +91,7 @@ video {
 .wrapper--media-background-top {
   background-color: #000;
   width: 100%;
-  margin: 0;
+  margin: 0 0 0.5em;
   padding: 0;
 }
 
