--- a/themes/metrumy/layouts/partials/logo.html
+++ b/themes/metrumy/layouts/partials/logo.html
@@ -1,5 +1,5 @@
-    <a class="logo--link" href="/">
+    
         <div class="logo">
-            Mad Software Musings 
+            <a class="logo--link" href="/">Mad Software Musings</a> 
         </div>
-    </a>
+    
