--- a/themes/metrumy/assets/sass/_logo.scss
+++ b/themes/metrumy/assets/sass/_logo.scss
@@ -1,21 +1,19 @@
 .logo {
   background-color: transparent;
+  margin: 0;
+  padding: 0.5em 1em;
+  height: 2.5em;
+  text-align: center;  
+}
+
+a.logo--link {
   color: $orange-deep;
   font-size: $s;
   font-family: $monospace;
   font-weight: bold;
   letter-spacing: 1px;
-  text-align: center;  
-  margin: 0;
-  padding: 0.5em 1em;
-  height: 2.5em;
-  background: $black;
-}
-
-.logo:hover {
-  color: $orange-light;
-}
-
-a.logo--link {
   text-decoration: none;
+  &:hover {
+    color: $orange-light;
+  }
 }
