--- a/themes/metrumy/layouts/partials/footer.html
+++ b/themes/metrumy/layouts/partials/footer.html
@@ -25,7 +25,9 @@
     </div>
 
     <div class="footer--link-top">
-        <a href="#top">top</a>
+        <a href="#top">
+            <button>top</button>
+        </a>
     </div>
 
 </footer>
