--- a/themes/metrumy/layouts/partials/head.html
+++ b/themes/metrumy/layouts/partials/head.html
@@ -37,8 +37,8 @@
     <!-- Stylesheets -->
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,400i,700" rel="stylesheet">
     
-    {{ $sass := resources.Get "sass/main.scss" | resources.ToCSS | resources.Minify | resources.Fingerprint }}
-    <link rel="stylesheet" href="{{ $sass.Permalink }}">
+    {{ $sass := resources.Get "sass/main.scss" | resources.ToCSS | resources.Minify }}
+    <link rel="stylesheet" href="{{ $sass.Permalink }}?v={{now.Unix}}">
     
     <link rel="icon" type="image/png" href="/icon512.png?v=3" sizes="512v512">
     <link rel="apple-touch-icon" href="/icon512.png?v=3" sizes="512v512">
