minor typography edits

--- a/themes/metrumy/layouts/partials/article.html
+++ b/themes/metrumy/layouts/partials/article.html
@@ -23,8 +23,10 @@
 
         {{ .Content }}
 
+        <div class="center">&#10086;</div>
     </div>
 
+    
 </section>
 
 <section class="subnav">
