--- a/themes/metrumy/assets/sass/_typography-global.scss
+++ b/themes/metrumy/assets/sass/_typography-global.scss
@@ -175,29 +175,13 @@ blockquote {
 }
 
 .article {
-  margin: 0 auto 3em;
+  margin: 0 auto 1em;
 }
 
 .article--narrow {
-  box-shadow: 0 1px 4px #aaa;
-  background-color: $background-color-light;
-  max-width: 890px; 
-  margin-left: auto;
-  margin-right: auto;
-  padding: 1em 5em 2em;
-  @media screen and (max-width: $screen-big) {
-    padding: 1em 3em 2em;
-  }
-  @media screen and (max-width: $screen-sml) {
-    padding: 1em;
-  }
-} 
-
-.article--shortnote {
-  background-color: $yellow-light;
-  font-family: $monospace;
+  @include wrapper-mid;
   padding: 1em;
-}
+} 
 
 .date {
   font-size: $s;
