--- a/themes/metrumy/assets/sass/_article.scss
+++ b/themes/metrumy/assets/sass/_article.scss
@@ -5,18 +5,13 @@
 .article--narrow {
   @include wrapper-mid;
   padding: 1em;
-} 
-
-.article-title {
-  margin-top: 1em;
-  margin-bottom: 1em;
 }
 
 .article-title--video {
   font-size: $l;
   margin-top: 0.5em;
   @media (max-width: $screen-sml) {
-    font-size: $lm;
+    font-size: $s;
   }   
 }
 
