--- a/themes/metrumy/assets/sass/_footer-global.scss
+++ b/themes/metrumy/assets/sass/_footer-global.scss
@@ -1,11 +1,11 @@
 footer {
   font-size: 1em;
   @include wrapper-mid;
-  margin: scale1(14) auto 0;
+  margin: 1em auto 0;
   padding: 0 1em 1em;
   
   @media (max-width: $screen-sml) {
-    margin: scale2(14) auto;
+    margin: 1em auto;
   }
 }
 
@@ -15,6 +15,6 @@ footer {
 }
 
 .footer--copyrights {
-  font-size: $s;
+  font-size: $xs;
   text-align: center;
 }
