--- a/themes/metrumy/layouts/partials/footer.html
+++ b/themes/metrumy/layouts/partials/footer.html
@@ -38,13 +38,11 @@
 
 </footer>
 
-<!-- comment unnecesary: "...development.js" or "...production.min.js"-->
+<!-- comment unnecesary:-->
 <!--
 <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
 -->
-<script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
-<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
 
 {{ $js := resources.Get "js/main.v2.js" }}
 <script src="{{ $js.Permalink }}?v={{now.Unix}}"></script>
